<resources>
    <string name="app_name">investment_android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首頁</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_stock_inputs">輸入資產標的與數量</string>
    <string name="menu_stock_outputs">輸出即時資產列表</string>

    <string name="Category">請選擇資產類別：</string>
    <string name="symbol">請輸入標的：</string>
    <string name="symbol_hint">Asset name (e.g., amd, QQQ)</string>
    <string name="amount">請輸入您擁有的數量：</string>
    <string name="amount_hint">Amount (e.g., 20, 100)</string>

</resources>