<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_trend"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_k_line"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_inputs"
            android:icon="@drawable/ic_menu_inputs"
            android:title="@string/menu_stock_inputs" />
        <item
            android:id="@+id/nav_outputs"
            android:icon="@drawable/ic_menu_outputs"
            android:title="@string/menu_stock_outputs" />
    </group>
</menu>